--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -6,6 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
+  overflow-x: hidden;
+  height: 100vh;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 code {
