--- a/front-end/src/components/Footer.module.css
+++ b/front-end/src/components/Footer.module.css
@@ -249,3 +249,14 @@
         font-size: 19px;
     }
 }
+
+@media (max-width: 375px) {
+    .privacy_corpo {
+        font-size: 10px;
+        margin-top: 18px;
+    }
+
+    .privacy_title {
+        font-size: 17px;
+    }
+}
