--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -94,10 +94,26 @@ code {
   padding-bottom: 50px;
 }
 
+#risultato {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
 @media (max-width: 992px) {
   #container_carosello {  
     padding-top: 33px;
     padding-bottom: 27px;
+  }
+
+  #risultato {
+    padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 720px) {
+  #risultato {
+    padding-bottom: 15px;
   }
 }
 
@@ -106,9 +122,9 @@ code {
     padding-top: 20px;
     padding-bottom: 10px;
   }
+
+  #risultato {
+    padding-bottom: 10px;
+  }
 }
 
-#risultato {
-  display: flex;
-  justify-content: center;
-}
