--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -65,6 +65,9 @@ code {
   height: auto;
 }
 
+.is-blurred { filter: blur(5px); }
+.is-blurred, .is-blurred * { pointer-events: none !important; }
+
 @media (max-width: 768px) {
   #sfondoSito {
     width: 120%;
